--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero">
-            <h1><span>S</span>haif <span>A</span>rfan</h1>
+          <a href="#daoplay">
+            <h1><span>S</span>DaoPlay <span>A</span>Project</h1>
           </a>
         </div>
         <div class="nav-list">
-          <div class="hamburger">
+          <div class="menu">
             <div class="bar"></div>
           </div>
           <ul>
             <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
-            <li><a href="#projects" data-after="Projects">Projects</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#contact" data-after="Contact">Contact</a></li>
+            <li><a href="#services" data-after="Musicas / Sets">Services</a></li>
+            <li><a href="#projects" data-after="Contatos">Projects</a></li>
+            <li><a href="#about" data-after="Charts">About</a></li>
+            <li><a href="#contact" data-after="Quem Somos?">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -36,13 +36,13 @@
   <!-- End Header -->
 
 
-  <!-- Hero Section  -->
-  <section id="hero">
+  <!-- Daoplay Section  -->
+  <section id="daoplay">
     <div class="hero container">
       <div>
         <h1>Hello, <span></span></h1>
-        <h1>My Name is <span></span></h1>
-        <h1>Arfan <span></span></h1>
+        <h1>DaoPlay<span></span></h1>
+        <h1>Project<span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
