--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <title>DaoPlay Crew</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#daoplay">
-            <h1><span>S</span>DaoPlay <span>A</span>Project</h1>
+            <h1><span>S</span>DaoPlay<span>A</span>Project</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -23,11 +23,11 @@
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Musicas / Sets">Services</a></li>
-            <li><a href="#projects" data-after="Contatos">Projects</a></li>
-            <li><a href="#about" data-after="Charts">About</a></li>
-            <li><a href="#contact" data-after="Quem Somos?">Contact</a></li>
+         <li><a href="#daoplay" data-after="Home">Home</a></li>
+            <li><a href="#musicas" data-after="musicas">Musicas</a></li>
+            <li><a href="#contato" data-after="contato">Contato</a></li>
+            <li><a href="#eventos" data-after="eventos">Eventos</a></li>
+            <li><a href="#who" data-after="who">Quem somos nos?</a></li>
           </ul>
         </div>
       </div>
@@ -38,11 +38,10 @@
 
   <!-- Daoplay Section  -->
   <section id="daoplay">
-    <div class="hero container">
+    <div class="daoplay container">
       <div>
-        <h1>Hello, <span></span></h1>
         <h1>DaoPlay<span></span></h1>
-        <h1>Project<span></span></h1>
+        <h1>Crew<span></span></h1>
         <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
