--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#daoplay">
-            <h1><span>S</span>DaoPlay<span>A</span>Project</h1>
+            <h1><span>D</span>aoPlay<span>C</span>rew</h1>
           </a>
         </div>
         <div class="nav-list">
