--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>DaoPlay Crew</title>
+  <title>My Website</title>
 </head>
 
 <body>
@@ -15,19 +15,19 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#daoplay">
-            <h1><span>D</span>aoPlay<span>C</span>rew</h1>
+            <h1><span>S</span>haif <span>A</span>rfan</h1>
           </a>
         </div>
         <div class="nav-list">
-          <div class="menu">
+          <div class="hamburger">
             <div class="bar"></div>
           </div>
           <ul>
-         <li><a href="#daoplay" data-after="Home">Home</a></li>
-            <li><a href="#musicas" data-after="musicas">Musicas</a></li>
-            <li><a href="#contato" data-after="contato">Contato</a></li>
-            <li><a href="#eventos" data-after="eventos">Eventos</a></li>
-            <li><a href="#who" data-after="who">Quem somos nos?</a></li>
+            <li><a href="#daoplay" data-after="Home">Home</a></li>
+            <li><a href="#musicas" data-after="musicas">musicas</a></li>
+            <li><a href="#contato" data-after="contato">contato</a></li>
+            <li><a href="#eventos" data-after="eventos">eventos</a></li>
+            <li><a href="#who" data-after="who">who</a></li>
           </ul>
         </div>
       </div>
@@ -36,48 +36,49 @@
   <!-- End Header -->
 
 
-  <!-- Daoplay Section  -->
+  <!-- daoplay Section  -->
   <section id="daoplay">
     <div class="daoplay container">
       <div>
-        <h1>DaoPlay<span></span></h1>
-        <h1>Crew<span></span></h1>
-        <a href="#projects" type="button" class="cta">Portfolio</a>
+        <h1>Hello, <span></span></h1>
+        <h1>My Name is <span></span></h1>
+        <h1>Arfan <span></span></h1>
+        <a href="#contato" type="button" class="cta">Portfolio</a>
       </div>
     </div>
   </section>
-  <!-- End Hero Section  -->
+  <!-- End daoplay Section  -->
 
-  <!-- Service Section -->
-  <section id="services">
-    <div class="services container">
-      <div class="service-top">
+  <!-- musicas Section -->
+  <section id="musicas">
+    <div class="musicas container">
+      <div class="musicas-top">
         <h1 class="section-title">Serv<span>i</span>ces</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
           magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
           voluptatum explicabo!</p>
       </div>
-      <div class="service-bottom">
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+      <div class="musicas-bottom">
+        <div class="musicas-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+        <div class="musicas-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+        <div class="musicas-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+        <div class="musicas-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
@@ -85,15 +86,15 @@
       </div>
     </div>
   </section>
-  <!-- End Service Section -->
+  <!-- End musicas Section -->
 
-  <!-- Projects Section -->
-  <section id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        <h1 class="section-title">Recent <span>Projects</span></h1>
+  <!-- contato Section -->
+  <section id="contato">
+    <div class="contato container">
+      <div class="contato-header">
+        <h1 class="section-title">Recent <span>contato</span></h1>
       </div>
-      <div class="all-projects">
+      <div class="all-contato">
         <div class="project-item">
           <div class="project-info">
             <h1>Project 1</h1>
@@ -157,18 +158,18 @@
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
+  <!-- End contato Section -->
 
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
+  <!-- eventos Section -->
+  <section id="eventos">
+    <div class="eventos container">
       <div class="col-left">
-        <div class="about-img">
+        <div class="eventos-img">
           <img src="./img/img-2.png" alt="img">
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
+        <h1 class="section-title">eventos <span>me</span></h1>
         <h2>Front End Developer</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
           repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
@@ -179,34 +180,34 @@
       </div>
     </div>
   </section>
-  <!-- End About Section -->
+  <!-- End eventos Section -->
 
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
+  <!-- who Section -->
+  <section id="who">
+    <div class="who container">
       <div>
-        <h1 class="section-title">Contact <span>info</span></h1>
+        <h1 class="section-title">who <span>info</span></h1>
       </div>
-      <div class="contact-items">
-        <div class="contact-item">
+      <div class="who-items">
+        <div class="who-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
-          <div class="contact-info">
+          <div class="who-info">
             <h1>Phone</h1>
             <h2>+1 234 123 1234</h2>
             <h2>+1 234 123 1234</h2>
           </div>
         </div>
-        <div class="contact-item">
+        <div class="who-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
-          <div class="contact-info">
+          <div class="who-info">
             <h1>Email</h1>
             <h2>info@gmail.com</h2>
             <h2>abcd@gmail.com</h2>
           </div>
         </div>
-        <div class="contact-item">
+        <div class="who-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
-          <div class="contact-info">
+          <div class="who-info">
             <h1>Address</h1>
             <h2>Fatikchhari, Chittagong, Bangladesh</h2>
           </div>
@@ -214,7 +215,7 @@
       </div>
     </div>
   </section>
-  <!-- End Contact Section -->
+  <!-- End who Section -->
 
   <!-- Footer -->
   <section id="footer">
@@ -243,5 +244,5 @@
   <!-- End Footer -->
   <script src="./app.js"></script>
 </body>
-Brain
+
 </html>
