--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#daoplay">
-            <h1><span>S</span>haif <span>A</span>rfan</h1>
+            <h1><span>D</span>aoPlay <span>C</span>rew</h1>
           </a>
         </div>
         <div class="nav-list">
-          <div class="hamburger">
+          <div class="menur">
             <div class="bar"></div>
           </div>
           <ul>
@@ -43,7 +43,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Arfan <span></span></h1>
-        <a href="#contato" type="button" class="cta">Portfolio</a>
+        <a href="#contato" type="button" class="cta">Contato</a>
       </div>
     </div>
   </section>
@@ -53,10 +53,8 @@
   <section id="musicas">
     <div class="musicas container">
       <div class="musicas-top">
-        <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
+        <h1 class="section-title">Musi<span>i</span>cas</h1>
+        <p>Musicas e Sets!</p>
       </div>
       <div class="musicas-bottom">
         <div class="musicas-item">
