--- a/index.html
+++ b/index.html
@@ -58,25 +58,25 @@
       </div>
       <div class="musicas-bottom">
         <div class="musicas-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="musicas-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="musicas-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
         <div class="musicas-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/musicas.png" /></div>
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
@@ -95,11 +95,9 @@
       <div class="all-contato">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>Contato 1</h1>
+            <h2>Nosso Contato</h2>
+            <p>Nosso Contato!</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
