--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#daoplay">
-            <h1><span>D</span>aoPlay <span>C</span>rew</h1>
+          <a href="#hero">
+            <h1><span>S</span>haif <span>A</span>rfan</h1>
           </a>
         </div>
         <div class="nav-list">
-          <div class="menur">
+          <div class="hamburger">
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="#daoplay" data-after="Home">Home</a></li>
-            <li><a href="#musicas" data-after="musicas">musicas</a></li>
-            <li><a href="#contato" data-after="contato">contato</a></li>
-            <li><a href="#eventos" data-after="eventos">eventos</a></li>
-            <li><a href="#who" data-after="who">who</a></li>
+            <li><a href="#hero" data-after="Home">Home</a></li>
+            <li><a href="#services" data-after="Service">Services</a></li>
+            <li><a href="#projects" data-after="Projects">Projects</a></li>
+            <li><a href="#about" data-after="About">About</a></li>
+            <li><a href="#contact" data-after="Contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -36,46 +36,48 @@
   <!-- End Header -->
 
 
-  <!-- daoplay Section  -->
-  <section id="daoplay">
-    <div class="daoplay container">
+  <!-- Hero Section  -->
+  <section id="hero">
+    <div class="hero container">
       <div>
         <h1>Hello, <span></span></h1>
         <h1>My Name is <span></span></h1>
         <h1>Arfan <span></span></h1>
-        <a href="#contato" type="button" class="cta">Contato</a>
+        <a href="#projects" type="button" class="cta">Portfolio</a>
       </div>
     </div>
   </section>
-  <!-- End daoplay Section  -->
+  <!-- End Hero Section  -->
 
-  <!-- musicas Section -->
-  <section id="musicas">
-    <div class="musicas container">
-      <div class="musicas-top">
-        <h1 class="section-title">Musi<span>i</span>cas</h1>
-        <p>Musicas e Sets!</p>
+  <!-- Service Section -->
+  <section id="services">
+    <div class="services container">
+      <div class="service-top">
+        <h1 class="section-title">Serv<span>i</span>ces</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
+          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
+          voluptatum explicabo!</p>
       </div>
-      <div class="musicas-bottom">
-        <div class="musicas-item">
+      <div class="service-bottom">
+        <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="musicas-item">
+        <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="musicas-item">
+        <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
             architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="musicas-item">
+        <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2>Web Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
@@ -84,20 +86,22 @@
       </div>
     </div>
   </section>
-  <!-- End musicas Section -->
+  <!-- End Service Section -->
 
-  <!-- contato Section -->
-  <section id="contato">
-    <div class="contato container">
-      <div class="contato-header">
-        <h1 class="section-title">Recent <span>contato</span></h1>
+  <!-- Projects Section -->
+  <section id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 class="section-title">Recent <span>Projects</span></h1>
       </div>
-      <div class="all-contato">
+      <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Contato 1</h1>
-            <h2>Nosso Contato</h2>
-            <p>Nosso Contato!</p>
+            <h1>Project 1</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
           <div class="project-img">
             <img src="./img/img-1.png" alt="img">
@@ -154,18 +158,18 @@
       </div>
     </div>
   </section>
-  <!-- End contato Section -->
+  <!-- End Projects Section -->
 
-  <!-- eventos Section -->
-  <section id="eventos">
-    <div class="eventos container">
+  <!-- About Section -->
+  <section id="about">
+    <div class="about container">
       <div class="col-left">
-        <div class="eventos-img">
+        <div class="about-img">
           <img src="./img/img-2.png" alt="img">
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">eventos <span>me</span></h1>
+        <h1 class="section-title">About <span>me</span></h1>
         <h2>Front End Developer</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
           repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
@@ -176,34 +180,34 @@
       </div>
     </div>
   </section>
-  <!-- End eventos Section -->
+  <!-- End About Section -->
 
-  <!-- who Section -->
-  <section id="who">
-    <div class="who container">
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="contact container">
       <div>
-        <h1 class="section-title">who <span>info</span></h1>
+        <h1 class="section-title">Contact <span>info</span></h1>
       </div>
-      <div class="who-items">
-        <div class="who-item">
+      <div class="contact-items">
+        <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
-          <div class="who-info">
+          <div class="contact-info">
             <h1>Phone</h1>
             <h2>+1 234 123 1234</h2>
             <h2>+1 234 123 1234</h2>
           </div>
         </div>
-        <div class="who-item">
+        <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
-          <div class="who-info">
+          <div class="contact-info">
             <h1>Email</h1>
             <h2>info@gmail.com</h2>
             <h2>abcd@gmail.com</h2>
           </div>
         </div>
-        <div class="who-item">
+        <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
-          <div class="who-info">
+          <div class="contact-info">
             <h1>Address</h1>
             <h2>Fatikchhari, Chittagong, Bangladesh</h2>
           </div>
@@ -211,7 +215,7 @@
       </div>
     </div>
   </section>
-  <!-- End who Section -->
+  <!-- End Contact Section -->
 
   <!-- Footer -->
   <section id="footer">
