--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>My Website</title>
+  <title>DaoPlay</title>
 </head>
 
 <body>
@@ -14,20 +14,20 @@
     <div class="header container">
       <div class="nav-bar">
         <div class="brand">
-          <a href="#hero">
-            <h1><span>S</span>haif <span>A</span>rfan</h1>
+          <a href="#daoplay">
+            <h1><span>D</span>aoPlay <span>C</span>rew</h1>
           </a>
         </div>
         <div class="nav-list">
-          <div class="hamburger">
+          <div class="menu">
             <div class="bar"></div>
           </div>
           <ul>
-            <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
-            <li><a href="#projects" data-after="Projects">Projects</a></li>
-            <li><a href="#about" data-after="About">About</a></li>
-            <li><a href="#contact" data-after="Contact">Contact</a></li>
+            <li><a href="#home" data-after="home">Home</a></li>
+            <li><a href="#musics" data-after="musicas">Musicas</a></li>
+            <li><a href="#who" data-after="quem">Quem Somos?</a></li>
+            <li><a href="#contact" data-after="contato">Contato</a></li>
+            <li><a href="#events" data-after="eventos">Eventos</a></li>
           </ul>
         </div>
       </div>
