--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ul>
             <li><a href="#home" data-after="home">Home</a></li>
             <li><a href="#musics" data-after="musicas">Musicas</a></li>
-            <li><a href="#who" data-after="quem">Quem Somos?</a></li>
+            <li><a href="#who" data-after="quem">Quem é Nois?</a></li>
             <li><a href="#contact" data-after="contato">Contato</a></li>
             <li><a href="#events" data-after="eventos">Eventos</a></li>
           </ul>
