--- a/index.html
+++ b/index.html
@@ -34,3 +34,15 @@
     </div>
   </section>
   <!-- End Header -->
+  
+  <!-- Home Section  -->
+  <section id="home">
+    <div class="home container">
+      <div>
+        <h1>DaoPlay, <span></span></h1>
+        <h1>Crew <span></span></h1>
+        <a href="#who" type="button" class="cta">Quem é Nois?</a>
+      </div>
+    </div>
+  </section>
+  <!-- End Home Section  -->
