--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
   <section id="home">
     <div class="home container">
       <div>
-        <h1>DaoPlay, <span></span></h1>
-        <h1>Crew <span></span></h1>
+        <h1>DaoPlay Crew <span></span></h1>
         <a href="#who" type="button" class="cta">Quem é Nois?</a>
       </div>
     </div>
