--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="home">
     <div class="home container">
       <div>
-        <h1>DaoPlay Crew <span></span></h1>
+        <h1><strong>DaoPlay Crew <span></span></strong></h1>
         <a href="#who" type="button" class="cta">Quem é Nois?</a>
       </div>
     </div>
