--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#daoplay">
-            <h1><span>D</span>aoPlay <span>C</span>rew</h1>
+            <img src="./img/daoplay-removebg-preview.png" alt="Semrush logo 1" width="30" height="30">
           </a>
         </div>
         <div class="nav-list">
