--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#daoplay">
-            <img src="./img/daoplay-removebg-preview.png">
+            <img src="./img/logodaoplay.png">
           </a>
         </div>
         <div class="nav-list">
