--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <h1><strong>DaoPlay Crew <span></span></strong></h1>
         <a href="#who" type="button" class="cta">Quem é Nois?</a>
         <div class="player">
-          
+          <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script><script> var jQuery_3_5_1 = $.noConflict(true);</script><script src="http://yesstreaming.com/js/freeYess.js"></script>
+          <script>jQuery_3_5_1('#freeYess').freeYess({URL: 'http://198.15.94.34:8006', platform: '2', mount_point: 'stream', autoplay: true, logo: 'https://raw.githubusercontent.com/printbr/daoplay/main/img/logodaoplay.png', bg: '4012E8', btn_color: '000000', song_color: 'F3FFE7', artist_color: 'F8BAB0', }); 
+          </script>
       </div>
       </div>
     </div>
