--- a/index.html
+++ b/index.html
@@ -48,5 +48,6 @@
       </div>
       </div>
     </div>
+    <div class="freeYess" id="freeYess"></div>
   </section>
   <!-- End Home Section  -->
